syntax = "proto3";

option csharp_namespace = "via.sep3.dataserver.grpc";
option java_multiple_files = true;
option java_package = "via.sep3.dataserver.grpc";

// ============================================================================
//  SERVICES
// ============================================================================

// ----------------------------------------------------------------------------
//  User Service
// ----------------------------------------------------------------------------
service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc GetUser(GetUserRequest) returns (User);
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (User);
}

// ----------------------------------------------------------------------------
//  Course Service
// ----------------------------------------------------------------------------
service CourseService {

  rpc GetCourses(GetCoursesRequest) returns (GetCoursesResponse);
  rpc AddCourse(AddCourseRequest) returns (AddCourseResponse);
  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse);
  rpc DeleteCourse (DeleteCourseRequest) returns (Empty);

  rpc GetLearningStep(GetLearningStepRequest) returns (GetLearningStepResponse);
  rpc AddLearningStep(AddLearningStepRequest) returns (AddLearningStepResponse);
  rpc UpdateLearningStep(UpdateLearningStepRequest) returns (UpdateLearningStepResponse);

  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse);

  rpc CreateLanguage(CreateLanguageRequest) returns (CreateLanguageResponse);
  rpc GetLanguages(GetLanguagesRequest) returns (GetLanguagesResponse);
}

// ----------------------------------------------------------------------------
//  Progress Service
// ----------------------------------------------------------------------------
service ProgressService {
  rpc GetCourseProgress(CourseProgressRequest) returns (CourseProgressResponse);
  rpc UpdateCourseProgress(CourseProgressUpdate) returns (Empty);
  rpc GetLeaderboard(Empty) returns (GetLeaderboardResponse);
}

// ============================================================================
//  MESSAGES
// ============================================================================

// --- Shared ---
message Empty {}

// ----------------------------------------------------------------------------
//  Domain: Users
// ----------------------------------------------------------------------------

message User {
  int32 id = 1;
  string username = 2;
  string password = 3;
  repeated Role roles = 4;
}

message Role {
  string role = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message AddUserRequest {
  string username = 1;
  string password = 2;
  repeated string roles = 3;
}

message AddUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string password = 3;
  repeated string roles = 4;
}


// ----------------------------------------------------------------------------
//  Domain: Courses
// ----------------------------------------------------------------------------

message Course {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string language = 4;
  string category = 5;
  int32 total_steps = 6;
  int32 author_id = 7;// author
  int32 approved_by = 8;// if 0, it is a draft. if > 0, it is pulished
}

message GetCoursesRequest {
  int32 user_id = 1;
}

message GetCoursesResponse {
  repeated Course courses = 1;
}

message AddCourseRequest {
  string title = 1;
  string description = 2;
  string language = 3;
  string category = 4;
  int32 author_id = 5;
}

message AddCourseResponse {
  Course course = 1;
}

message UpdateCourseRequest {
  Course course = 1;
}

message UpdateCourseResponse {
  Course course = 1;
}

message CourseCategory {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CreateCategoryResponse {
  CourseCategory category = 1;
}

message GetCategoriesRequest {}

message GetCategoriesResponse {
  repeated CourseCategory categories = 1;
}

message Language {
  string code = 1; 
  string name = 2; 
}

message CreateLanguageRequest {
  string code = 1;
  string name = 2;
}

message CreateLanguageResponse {
  Language language = 1;
}

message GetLanguagesRequest {}

message GetLanguagesResponse {
  repeated Language languages = 1;
}

message DeleteCourseRequest {
  int32 course_id = 1;
  int32 user_id = 2;
}

// ----------------------------------------------------------------------------
//  Domain: Learning Steps
// ----------------------------------------------------------------------------

message LearningStep {
  int32 course_id = 1;
  int32 step_order = 2;
  string content = 3;
  string type = 4;
}

message GetLearningStepRequest {
  int32 course_id = 1;
  int32 step_number = 2;
}

message GetLearningStepResponse {
  LearningStep learning_step = 1;
}

message AddLearningStepRequest {
  LearningStep learning_step = 1;
}

message AddLearningStepResponse {
  LearningStep learning_step = 1;
}

message UpdateLearningStepRequest {
  LearningStep learning_step = 1;
}

message UpdateLearningStepResponse {
  LearningStep learning_step = 1;
}

// ----------------------------------------------------------------------------
//  Domain: Progress & Leaderboard
// ----------------------------------------------------------------------------

message CourseProgressRequest {
  int32 user_id = 1;
  int32 course_id = 2;
}

message CourseProgressResponse {
  int32 current_step = 1;
}

message CourseProgressUpdate {
  int32 user_id = 1;
  int32 course_id = 2;
  int32 current_step = 3;
}

message LeaderboardEntry {
  string username = 1;
  int32 total_score = 2;
  int32 rank = 3;
}

message GetLeaderboardResponse {
  repeated LeaderboardEntry entries = 1;
}