namespace Entities;

public class LearningStepContent : IIdentifiable
{
    public int Id { get; set; }
}