@startuml DomainModel
!include https://raw.githubusercontent.com/fredoslav2004/MinimalThemePUML/refs/heads/main/minimal-theme.puml
scale 1
' ▶ ◀ ▲ ▼

skinparam ranksep 120
skinparam nodesep 120
skinparam ArrowFontSize 9

together {
    class User
    class Teacher
    class Administrator
}

class User
{
    id
}

together {
    class Course
    class CourseDraft
    class LearningStep
    class CourseCategory
    class LearningStepType
    class LearningStepContent
}
class Course {
    id
    language
    title
    description
}
class LearningStep {
    id
}
class LearningStepType{

}
class LearningStepContent{
    
}
class CourseDraft
{
    language
    title
    description
}
class CourseCategory
{
    name
    description
}

Teacher "*" -down- "*" Course : Is assigned to ▼
LearningStep "*" -right- "1" Teacher : IsCreatedBy ▶
Administrator "*" -down- "*" Course : Manages ▼
LearningStep "*" -down- "1" Course : Belongs to ▼
LearningStepType "1" -up- "*" LearningStep : Is of type ▼
LearningStepContent "1" -left- "1" LearningStep : Included in ▲
Teacher -up-|> User
Administrator -up-|> User
User "*" -left- "*" LearningStep : ◀ Completes
Administrator "*" -left- "*" Teacher : Manages ◀
Course "*" -down- "1" CourseCategory : has ▼ 
CourseDraft "1" -down- "1" Course : versionOf ▼
Teacher "1" -down- "*" CourseDraft : creates ▼

@enduml